install the library

--- a/modules/rgbd/CMakeLists.txt
+++ b/modules/rgbd/CMakeLists.txt
@@ -5,3 +5,7 @@
 # merge some RGBD functions into a module
 set(the_description "a set of RGBD functions")
 ocv_define_module(rgbd)
+
+install(TARGETS opencv_rgbd
+        DESTINATION lib
+)
