add tests for computing the normals

--- a/rgbd/CMakeLists.txt
+++ b/rgbd/CMakeLists.txt
@@ -21,3 +21,19 @@ install(DIRECTORY include/opencv2/rgbd
         DESTINATION include/opencv2
         COMPONENT main
 )
+
+# Add some tests
+find_package(GTest QUIET)
+
+include_directories(${GTEST_INCLUDE_DIRS})
+
+add_executable(rgbd_tests test/test_main.cpp
+                                    test/test_compute_normals.cpp
+                                    test/test_precomp.cpp
+)
+target_link_libraries(rgbd_tests ${GTEST_BOTH_LIBRARIES}
+                                 ${OpenCV_LIBRARIES}
+                                 opencv_rgbd
+)
+
+add_test(rgbd_tests rgbd_tests)
