--- a/rgbd/CMakeLists.txt
+++ b/rgbd/CMakeLists.txt
@@ -30,6 +30,7 @@ include_directories(${GTEST_INCLUDE_DIRS})
 add_executable(rgbd_tests test/test_main.cpp
                                     test/test_compute_normals.cpp
                                     test/test_precomp.cpp
+                                    test/test_utils.cpp
 )
 target_link_libraries(rgbd_tests ${GTEST_BOTH_LIBRARIES}
                                  ${OpenCV_LIBRARIES}
