deal with the gtests properly

--- a/rgbd/CMakeLists.txt
+++ b/rgbd/CMakeLists.txt
@@ -23,8 +23,6 @@ install(DIRECTORY include/opencv2/rgbd
 )
 
 # Add some tests
-find_package(GTest QUIET)
-
 include_directories(${GTEST_INCLUDE_DIRS})
 
 add_executable(rgbd_tests test/test_main.cpp
@@ -32,9 +30,12 @@ add_executable(rgbd_tests test/test_main.cpp
                                     test/test_precomp.cpp
                                     test/test_utils.cpp
 )
+
+find_library(OPENCV_TS_LIBRARY opencv_ts ${OpenCV_LIB_DIR})
 target_link_libraries(rgbd_tests ${GTEST_BOTH_LIBRARIES}
                                  ${OpenCV_LIBRARIES}
                                  opencv_rgbd
+                                 ${OPENCV_TS_LIBRARY}
 )
 
 add_test(rgbd_tests rgbd_tests)
