--- a/rgbd/CMakeLists.txt
+++ b/rgbd/CMakeLists.txt
@@ -29,7 +29,7 @@ install(DIRECTORY include/opencv2/rgbd
 include_directories(${GTEST_INCLUDE_DIRS})
 
 add_executable(rgbd_tests test/test_main.cpp
-                                    test/test_compute_normals.cpp
+                                    test/test_normal.cpp
                                     test/test_precomp.cpp
                                     test/test_utils.cpp
 )
