--- a/rgbd/CMakeLists.txt
+++ b/rgbd/CMakeLists.txt
@@ -30,17 +30,14 @@ add_executable(odometry_evaluation samples/odometry_evaluation.cpp)
 target_link_libraries(odometry_evaluation ${OpenCV_LIBRARIES} opencv_rgbd)
 
 # Add some tests
-include_directories(${GTEST_INCLUDE_DIRS})
-
 add_executable(rgbd_tests test/test_main.cpp
-                                    test/test_normal.cpp
-                                    test/test_precomp.cpp
-                                    test/test_utils.cpp
+                          test/test_normal.cpp
+                          test/test_precomp.cpp
+                          test/test_utils.cpp
 )
 
 find_library(OPENCV_TS_LIBRARY opencv_ts ${OpenCV_LIB_DIR})
-target_link_libraries(rgbd_tests ${GTEST_BOTH_LIBRARIES}
-                                 ${OpenCV_LIBRARIES}
+target_link_libraries(rgbd_tests ${OpenCV_LIBRARIES}
                                  opencv_rgbd
                                  ${OPENCV_TS_LIBRARY}
 )
