--- a/package.xml
+++ b/package.xml
@@ -9,7 +9,9 @@
 
   <url>http://ecto.willowgarage.com</url>
   <build_depend>catkin</build_depend>
+  <build_depend>libg2o</build_depend>
   <build_depend>opencv2</build_depend>
 
+  <run_depend>libg2o</run_depend>
   <run_depend>opencv2</run_depend>
 </package>
