--- a/package.xml
+++ b/package.xml
@@ -11,7 +11,9 @@
   <build_depend>catkin</build_depend>
   <build_depend>libg2o</build_depend>
   <build_depend>opencv2</build_depend>
+  <build_depend>pcl</build_depend>
 
   <run_depend>libg2o</run_depend>
   <run_depend>opencv2</run_depend>
+  <run_depend>pcl</run_depend>
 </package>
