autofind the creative SDK

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,8 @@
 add_subdirectory(opencv_candidate)
 add_subdirectory(rgbd)
 
-return()
-add_subdirectory(creative)
+find_library(DEPTH_SENSE_LIBRARIES DepthSense /opt/DepthSenseSDK/lib)
+
+if (NOT ${DEPTH_SENSE_LIBRARIES} STREQUAL DEPTH_SENSE_LIBRARIES-NOTFOUND)
+  add_subdirectory(creative)
+endif()
