fix the buildtool_depend for catkin

--- a/package.xml
+++ b/package.xml
@@ -8,7 +8,7 @@
   <license>BSD</license>
 
   <url>http://ecto.willowgarage.com</url>
-  <build_depend>catkin</build_depend>
+
   <build_depend>libg2o</build_depend>
   <build_depend>opencv2</build_depend>
   <build_depend>pcl</build_depend>
@@ -16,4 +16,6 @@
   <run_depend>libg2o</run_depend>
   <run_depend>opencv2</run_depend>
   <run_depend>pcl</run_depend>
+
+  <buildtool_depend>catkin</buildtool_depend>
 </package>
