made reconst3d lib

--- a/src/rgbd/CMakeLists.txt
+++ b/src/rgbd/CMakeLists.txt
@@ -46,7 +46,7 @@ target_link_libraries(rgbd_tests ${OpenCV_LIBRARIES}
 
 add_test(rgbd_tests rgbd_tests)
 
-# add the model capture app/library
+# Model capture stuff
 find_package(PCL REQUIRED COMPONENTS io filters visualization features segmentation surface)
 include_directories(SYSTEM ${PCL_INCLUDE_DIRS}
                            /usr/include/suitesparse
@@ -58,32 +58,27 @@ find_package(libg2o)
 
 include_directories(SYSTEM ${EIGEN_INCLUDE_DIRS})
 
-add_executable(model_capture samples/reconst3d/reconst3d.hpp
-                             samples/reconst3d/reconst3d_init.cpp
+# add reconst3d library
+set(reconst3d_dir samples/reconst3d)
+file(GLOB reconst3d_headers "${reconst3d_dir}/include/*.hpp")
+file(GLOB reconst3d_sources "${reconst3d_dir}/src/*.hpp" "${reconst3d_dir}/src/*.cpp")
 
-                             samples/reconst3d/graph_optimizations.hpp
-                             samples/reconst3d/ocv_pcl_convert.hpp
-
-                             samples/reconst3d/capture.cpp
-                             samples/reconst3d/reconstruction.cpp
-                             samples/reconst3d/model.cpp
-
-                             samples/reconst3d/load_data.cpp
-                             samples/reconst3d/mask_data.cpp
-
-                             samples/reconst3d/graph_se3.cpp
-                             samples/reconst3d/graph_se3_rgbd_icp.cpp
-                             samples/reconst3d/graph_se3_rgbd_icp_model.cpp
-
-                             samples/model_capture.cpp
-              )
-target_link_libraries(model_capture ${catkin_LIBRARIES}
-                                    ${OpenCV_LIBRARIES}
-                                    opencv_rgbd
-                                    ${libg2o_LIBRARIES}
-                                    ${PCL_LIBRARIES}
-                                    cholmod
-                                    cxsparse
+add_library(opencv_candidate_reconst3d ${reconst3d_headers} ${reconst3d_sources})
+target_link_libraries(opencv_candidate_reconst3d ${catkin_LIBRARIES}
+                                                 ${OpenCV_LIBRARIES}
+                                                 opencv_rgbd
+                                                 ${libg2o_LIBRARIES}
+                                                 ${PCL_LIBRARIES}
+                                                 cholmod
+                                                 cxsparse
 )
+set_target_properties(opencv_candidate_reconst3d PROPERTIES COMPILE_FLAGS "-fopenmp" LINK_FLAGS "-fopenmp")
 
+# add model capture sample
+include_directories(${reconst3d_dir}/include)
+add_executable(model_capture samples/model_capture.cpp)
+target_link_libraries(model_capture ${OpenCV_LIBRARIES}
+                                    opencv_rgbd
+                                    opencv_candidate_reconst3d
+)
 set_target_properties(model_capture PROPERTIES COMPILE_FLAGS "-fopenmp" LINK_FLAGS "-fopenmp")
