transfer files from deprecated vision_future, not sure if we need them

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(opencv_candidate)
 add_subdirectory(reconst3d)
 add_subdirectory(rgbd)
+add_subdirectory(app)
 
 find_library(DEPTH_SENSE_LIBRARIES DepthSense /opt/DepthSenseSDK/lib)
 
