--- a/src/opencv_candidate/CMakeLists.txt
+++ b/src/opencv_candidate/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_library(opencv_candidate SHARED
-  lsh.cpp
-  )
+add_library(opencv_candidate datamatrix.cpp
+                             lsh.cpp
+)
 
 target_link_libraries(opencv_candidate
   ${OpenCV_LIBS}
@@ -15,3 +15,17 @@ install(TARGETS opencv_candidate
 #  VERSION ${object_recognition_VERSION}
 #  SOVERSION ${object_recognition_SOVERSION}
 #  )
+
+# create some Python wrappers
+set(Python_ADDITIONAL_VERSIONS 2.7)
+find_package(PythonLibs REQUIRED)
+
+include_directories(SYSTEM ${PYTHON_INCLUDE_PATH})
+
+add_library(pyopencv_candidate pyopencv_candidate.cpp)
+target_link_libraries(pyopencv_candidate)
+
+set_target_properties(pyopencv_candidate PROPERTIES
+                      LIBRARY_OUTPUT_DIRECTORY ${CATKIN_BUILD_PREFIX}/${CATKIN_GLOBAL_PYTHON_DESTINATION}/${PROJECT_NAME}/boost/
+                      PREFIX ""
+)
