use the proper catkin variable

--- a/src/opencv_candidate/CMakeLists.txt
+++ b/src/opencv_candidate/CMakeLists.txt
@@ -30,6 +30,6 @@ add_library(pyopencv_candidate pyopencv_candidate.cpp)
 target_link_libraries(pyopencv_candidate)
 
 set_target_properties(pyopencv_candidate PROPERTIES
-                      LIBRARY_OUTPUT_DIRECTORY ${CATKIN_BUILD_PREFIX}/${CATKIN_GLOBAL_PYTHON_DESTINATION}/${PROJECT_NAME}/boost/
+                      LIBRARY_OUTPUT_DIRECTORY ${CATKIN_DEVEL_PREFIX}/${CATKIN_GLOBAL_PYTHON_DESTINATION}/${PROJECT_NAME}/boost/
                       PREFIX ""
 )
