--- a/src/opencv_candidate/CMakeLists.txt
+++ b/src/opencv_candidate/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(opencv_candidate datamatrix.cpp
 target_link_libraries(opencv_candidate
   ${OpenCV_LIBS}
   )
+set_target_properties(opencv_candidate PROPERTIES COMPILE_FLAGS "-fopenmp" LINK_FLAGS "-fopenmp")
 
 #set_target_properties(opencv_candidate PROPERTIES COMPILE_FLAGS "-msse4.2")
 
