--- a/package.xml
+++ b/package.xml
@@ -10,11 +10,11 @@
   <url>http://ecto.willowgarage.com</url>
 
   <build_depend>libg2o</build_depend>
-  <build_depend>opencv2</build_depend>
+  <build_depend>cv_bridge</build_depend>
   <build_depend>pcl_ros</build_depend>
 
   <run_depend>libg2o</run_depend>
-  <run_depend>opencv2</run_depend>
+  <run_depend>cv_bridge</run_depend>
   <run_depend>pcl_ros</run_depend>
 
   <buildtool_depend>catkin</buildtool_depend>
