do not compile RGBD for OpenCV3 (as it is in there)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_subdirectory(opencv_candidate)
 add_subdirectory(reconst3d)
+if(OpenCV_VERSION VERSION_LESS "3.0")
 add_subdirectory(rgbd)
+endif()
 
 find_library(DEPTH_SENSE_LIBRARIES DepthSense /opt/DepthSenseSDK/lib)
 
